fingbugs issues + documentation fixes